--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@
 buildscript {
     ext.kotlin_version = '1.0.4'
     ext.anko_version = '0.9'
+    ext.supportlib_version = '25.0.0'
+    ext.kodein_version = '3.1.0'
 
     repositories {
         jcenter()
@@ -10,8 +12,18 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0-M2'
     }
 }
+
+//apply plugin: 'org.junit.platform.gradle.plugin'
+
+//junitPlatform {
+//    engines {
+//        include 'spek'
+//    }
+//}
+
 
 allprojects {
     repositories {
