--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,11 +39,14 @@ dependencies {
     compile "com.squareup.retrofit2:retrofit:2.1.0"
     compile "com.squareup.retrofit2:converter-gson:2.1.0"
     compile "com.squareup.retrofit2:adapter-rxjava:2.1.0"
+    compile 'com.github.salomonbrys.kotson:kotson:2.3.0'
+
     compile "com.google.code.gson:gson:2.7"
     compile "com.github.salomonbrys.kodein:kodein:$kodein_version"
     compile "com.github.salomonbrys.kodein:kodein-android:$kodein_version"
 
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile "com.squareup.okhttp3:okhttp:$okhttp_version"
+    compile "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.6'
 
