--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     ext.anko_version = '0.9'
     ext.supportlib_version = '25.0.0'
     ext.kodein_version = '3.1.0'
+    ext.okhttp_version = '3.4.1'
 
     repositories {
         jcenter()
@@ -15,15 +16,6 @@ buildscript {
         classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0-M2'
     }
 }
-
-//apply plugin: 'org.junit.platform.gradle.plugin'
-
-//junitPlatform {
-//    engines {
-//        include 'spek'
-//    }
-//}
-
 
 allprojects {
     repositories {
