--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,12 +38,21 @@ android {
         }
     }
 
+    configurations {
+        integrationTestCompile.extendsFrom testCompile
+        integrationTestRuntime.extendsFrom testRuntime
+    }
+
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
         prod.java.srcDirs += 'src/prod/kotlin'
         mock.java.srcDirs += 'src/mock/kotlin'
         test.java.srcDirs += 'src/test/kotlin'
 
+    }
+
+    kapt {
+        generateStubs = true
     }
 }
 
@@ -56,10 +65,13 @@ dependencies {
     compile "com.android.support:cardview-v7:$supportlib_version"
     compile "com.android.support:recyclerview-v7:$supportlib_version"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile "com.squareup.retrofit2:retrofit:2.1.0"
-    compile "com.squareup.retrofit2:converter-gson:2.1.0"
-    compile "com.squareup.retrofit2:adapter-rxjava:2.1.0"
+    compile "com.squareup.retrofit2:retrofit:$retrofit_version"
+    compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    compile "com.squareup.retrofit2:adapter-rxjava:$retrofit_version"
     compile 'com.github.salomonbrys.kotson:kotson:2.3.0'
+    compile 'com.github.grandstaish.paperparcel:paperparcel:1.0.0'
+    compile 'com.github.grandstaish.paperparcel:paperparcel-kotlin:1.0.0'
+    kapt 'com.github.grandstaish.paperparcel:compiler:1.0.0'
 
     compile "com.google.code.gson:gson:2.7"
     compile "com.github.salomonbrys.kodein:kodein:$kodein_version"
@@ -86,6 +98,8 @@ dependencies {
 
 
 }
+
+
 
 configurations.all {
     resolutionStrategy.force "com.android.support:support-annotations:$supportlib_version"
