--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     ext.supportlib_version = '25.0.0'
     ext.kodein_version = '3.1.0'
     ext.okhttp_version = '3.4.1'
+    ext.retrofit_version = '2.1.0'
 
     repositories {
         jcenter()
@@ -17,9 +18,12 @@ buildscript {
     }
 }
 
+
+
 allprojects {
     repositories {
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
